Styled Login and Signup views Fixed layout issues in navbar and for products with small descriptions

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -9,7 +9,7 @@ main section.categories-show {
 
     .product {
       // flex:      1;
-      max-width: 260px;
+      width: 260px;
       // so that footer within can be positioned absolutely
       position:  relative;
 
